# NN

./: 1.conda-setup.ipynb  2.poetry-setup.ipynb  3.basic-MLP.ipynb  3.neural-network.ipynb  Makefile  conda-environment-setup.ipynb  environment.yml  environment_save.yml  notebook (copy).ipynb  notebook.ipynb  poetry-environment-setup.ipynb  pyproject.toml  test.ipynb
doc/: Conda+Poetry.txt
