[tool.poetry]
name = "NN"
version = "0.1.0"
description = "Neural Networks"
authors = ["seub <brice.loustau@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
